@@ -24,6 +24,7 @@
 #include "zbxjson.h"
 
 extern int	CONFIG_TIMEOUT;
+extern int	CONFIG_TRAPPER_TIMEOUT;
 
 void	send_proxyconfig(zbx_socket_t *sock, struct zbx_json_parse *jp);
 void	recv_proxyconfig(zbx_socket_t *sock, struct zbx_json_parse *jp);
